add photo-actions class to add-photo form, apply flexbox styling to photo-actions to prevent button squishing

--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -156,6 +156,11 @@
   margin-bottom: 10px;
 }
 
+.photo-actions {
+  /* margin-top: 20px; */
+  display: flex;
+}
+
 @media only screen and (min-width: 768px) {
   .show-container {
     padding: 15px;
