add choose-photo-btn id to choose photo label, apply styling to center text

--- a/main_app/templates/shows/detail.html
+++ b/main_app/templates/shows/detail.html
@@ -54,7 +54,7 @@
         class="photo-actions"
       >
         {% csrf_token %}
-        <label class="btn secondary">
+        <label class="btn secondary" id="choose-photo-btn">
           Choose Photo
           <input type="file" name="photo-file" id="file-input">
         </label>
