--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -161,6 +161,10 @@
   display: flex;
 }
 
+#choose-photo-btn {
+  text-align: center;
+}
+
 @media only screen and (min-width: 768px) {
   .show-container {
     padding: 15px;
