add upload-photo-btn id for styling, change font size in photo action btns, change wording of btn labels for clarity

--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -163,6 +163,12 @@
 
 #choose-photo-btn {
   text-align: center;
+  font-size: var(--font-reg);
+}
+
+#upload-photo-btn {
+  /* text-align: center; */
+  font-size: var(--font-reg);
 }
 
 @media only screen and (min-width: 768px) {
