--- a/main_app/templates/shows/detail.html
+++ b/main_app/templates/shows/detail.html
@@ -55,10 +55,10 @@
       >
         {% csrf_token %}
         <label class="btn secondary" id="choose-photo-btn">
-          Choose Photo
+          Choose New Photo
           <input type="file" name="photo-file" id="file-input">
         </label>
-        <button type="submit" class="btn submit">Upload Photo</button>
+        <button type="submit" class="btn submit" id="upload-photo-btn">Upload Chosen Photo</button>
       </form>
     </div>
   </section>
